--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<meta name="theme-color" content="#1976D2">
+
 <title>Fala Fácil</title>
 
 <link rel="stylesheet" href="style.css">
@@ -21,57 +23,58 @@
 
 <div class="container">
 
+
 <button onclick="abrirModal('beberModal')">
-
 <span class="emoji">🥤</span>
-
 <span>Quero beber</span>
-
 </button>
 
 
 <button onclick="falar('Quero comer')">
-
 <span class="emoji">🍽️</span>
-
 <span>Comer</span>
-
 </button>
 
 
 <button onclick="falar('Que horas tomar banho?')">
-
 <span class="emoji">🚿</span>
-
 <span>Banho</span>
-
 </button>
 
 
 <button onclick="abrirModal('dorModal')">
-
 <span class="emoji">😖</span>
-
 <span>Dor</span>
-
 </button>
 
 
 <button onclick="falar('Quero deitar')">
-
 <span class="emoji">🛏️</span>
-
 <span>Deitar</span>
-
 </button>
 
 
 <button onclick="abrirModal('chamarModal')">
-
 <span class="emoji">📢</span>
-
 <span>Chamar</span>
+</button>
 
+
+<button onclick="falar('Quero levantar')">
+<span class="emoji">🧍</span>
+<span>Levantar</span>
+</button>
+
+
+<button onclick="falar('Quero sentar')">
+<span class="emoji">🪑</span>
+<span>Sentar</span>
+</button>
+
+
+<button onclick="falar('Quero subir')">
+<span class="emoji">⬆️</span>
+<span>Subir</span>
 </button>
 
 
@@ -88,13 +91,9 @@
 <h2>O que quer beber?</h2>
 
 <button onclick="falar('Quero água')">Água</button>
-
 <button onclick="falar('Quero suco')">Suco</button>
-
 <button onclick="falar('Quero café')">Café</button>
-
 <button onclick="falar('Quero café com leite')">Café com leite</button>
-
 <button onclick="falar('Quero refrigerante')">Refrigerante</button>
 
 <button onclick="fecharModal()">Fechar</button>
@@ -114,11 +113,8 @@
 <h2>Quem deseja chamar?</h2>
 
 <button onclick="falar('Eli')">Eli</button>
-
 <button onclick="falar('Mãe')">Mãe</button>
-
 <button onclick="falar('Tal')">Tal</button>
-
 <button onclick="falar('Gabriel')">Gabriel</button>
 
 <button onclick="fecharModal()">Fechar</button>
@@ -138,15 +134,10 @@
 <h2>Onde dói?</h2>
 
 <button onclick="falar('Dor na cabeça')">Cabeça</button>
-
 <button onclick="falar('Dor no braço')">Braço</button>
-
 <button onclick="falar('Dor na perna')">Perna</button>
-
 <button onclick="falar('Dor nas costas')">Costas</button>
-
 <button onclick="falar('Dor no peito')">Peito</button>
-
 <button onclick="falar('Dor na barriga')">Barriga</button>
 
 <button onclick="fecharModal()">Fechar</button>
