Add buttons for physiotherapy and doctor inquiries
Added buttons for physiotherapy and doctor inquiries.

--- a/index.html
+++ b/index.html
@@ -78,6 +78,18 @@
 </button>
 
 
+<button onclick="falar('Quando vou fazer a físio?')">
+<span class="emoji">🧑‍⚕️</span>
+<span>Fisioterapia</span>
+</button>
+
+
+<button onclick="falar('Quando vou no médico?')">
+<span class="emoji">👨‍⚕️</span>
+<span>Médico</span>
+</button>
+
+
 </div>
 
 
@@ -116,6 +128,7 @@
 <button onclick="falar('Mãe')">Mãe</button>
 <button onclick="falar('Tal')">Tal</button>
 <button onclick="falar('Gabriel')">Gabriel</button>
+<button onclick="falar('Lilian')">Lilian</button>
 
 <button onclick="fecharModal()">Fechar</button>
 
@@ -150,7 +163,5 @@
 
 <script src="script.js"></script>
 
-
 </body>
-
 </html>
